# aoc-rs-2023

./: Cargo.toml  p.py  test.txt
src/: days.rs  main.rs
src/days/: day_11.rs  template.rs
