[package]
name = "rs-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
aoc_lib = { path = "../aoc_lib" }
color-eyre = "0.6.2"
colored = "2.1.0"
hashbrown = "0.14.3"
itertools = "0.12.1"
